# SG-CheckGen

./: .eslintrc.cjs  .gitignore  AGENTS.md  COPYRIGHT  README.md  index.html  manifest.webmanifest  package-lock.json  package.json  sw.js  tailwind.config.ts  tsconfig.node.json  vite.config.ts
assets/: dialog-CCABePby.js  fs-CF6HXR0D.js  index-C6WAkuty.js  index-D5p3r8uK.css  index-DP1C2Kag.js  index-DRUoka-t.js  index-I37rvt9_.js  tauri-CNyWDAYJ.js
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/agents/: DataAgent.ts  ExportAgent.ts  FileAgent.ts  PlatformAgent.ts  RenderAgent.tsx  TemplateAgent.ts  UIAgent.tsx
src/styles/: print.css
src/templates/: default_tw_bank.json
src/utils/: formatValue.ts
