[package]
name = "check-generator"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["dialog-open", "fs-readBinaryFile"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
